[gd_scene load_steps=37 format=3 uid="uid://dnrp17tl6hqdr"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_s532u"]
[ext_resource type="PackedScene" uid="uid://cvw7001060x02" path="res://assets/blends/player.blend" id="2_gkjm6"]
[ext_resource type="PackedScene" uid="uid://bgqqalsk4cat7" path="res://assets/blends/shield.blend" id="3_5xic8"]
[ext_resource type="PackedScene" uid="uid://c62beyyaw2nqs" path="res://assets/blends/sword.blend" id="4_2nl88"]
[ext_resource type="Script" path="res://scripts/resources/ActorResource.gd" id="5_g68hx"]
[ext_resource type="Script" path="res://scripts/Inventory.gd" id="5_ok3pt"]
[ext_resource type="Script" path="res://scripts/Item.gd" id="6_dwsm0"]
[ext_resource type="Resource" uid="uid://ldttpg021vpf" path="res://resources/items/armour_copper.tres" id="7_oaxic"]
[ext_resource type="Resource" uid="uid://cvt4tshat02ya" path="res://resources/items/sword_iron.tres" id="8_22kqg"]
[ext_resource type="Animation" uid="uid://dmgv52ts65u8u" path="res://resources/animations/left_attack.res" id="9_tkh5p"]
[ext_resource type="Animation" uid="uid://dc2qfirig4a6i" path="res://resources/animations/left_defend.res" id="10_gavwc"]
[ext_resource type="Animation" uid="uid://dmkg0rqufkgbh" path="res://resources/animations/left_idle.res" id="11_jtidr"]
[ext_resource type="Animation" uid="uid://dpjabjwqu5msh" path="res://resources/animations/right_attack.res" id="12_johw1"]
[ext_resource type="Animation" uid="uid://d07pjwo5i3s1d" path="res://resources/animations/right_defend.res" id="13_7b04m"]
[ext_resource type="PackedScene" uid="uid://q62crlnruouu" path="res://scenes/menus/inventory_ui.tscn" id="14_ibrox"]
[ext_resource type="Animation" uid="uid://f43jgwd3yp0i" path="res://resources/animations/right_idle.res" id="14_sqe5e"]
[ext_resource type="AudioStream" uid="uid://tbmn8npipeyj" path="res://assets/SFX/hitHurt(1).wav" id="17_r32ks"]
[ext_resource type="AudioStream" uid="uid://c8drrx33t3im" path="res://assets/SFX/hitHurt(2).wav" id="18_7oaty"]
[ext_resource type="AudioStream" uid="uid://xfohhfwk1287" path="res://assets/SFX/hitHurt(4).wav" id="19_or1wg"]

[sub_resource type="Resource" id="Resource_rsrnc"]
script = ExtResource("5_g68hx")
name = "Player"
health = 10
defense = 0
speed = 6.0
attack = 5
jump_height = 4
acenstion_time = 0.5
decension_time = 0.5
model = null

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gcslc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ywpex"]
radius = 1.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrnqm"]
_data = {
"left attack": ExtResource("9_tkh5p"),
"left defend": ExtResource("10_gavwc"),
"left idle": ExtResource("11_jtidr"),
"right attack": ExtResource("12_johw1"),
"right defend": ExtResource("13_7b04m"),
"right idle": ExtResource("14_sqe5e")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nyeih"]
animation = &"right idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uvejo"]
animation = &"left attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d65td"]
animation = &"left defend"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dvuhl"]
animation = &"right attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k60pe"]
animation = &"right defend"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4sflw"]
animation = &"left idle"

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_ktbds"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_0tcnb"]
filters = ["Armature/Skeleton3D:left arm", "Armature/Skeleton3D:left arm ik"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_acu70"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_sv334"]
filters = ["Armature/Skeleton3D:right arm", "Armature/Skeleton3D:right arm ik"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_hhr7y"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_1wgrn"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_4sflw")
nodes/Animation/position = Vector2(-500, -120)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_nyeih")
"nodes/Animation 2/position" = Vector2(-580, 300)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_uvejo")
"nodes/Animation 3/position" = Vector2(-320, 200)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_d65td")
"nodes/Animation 4/position" = Vector2(-520, 20)
"nodes/Animation 5/node" = SubResource("AnimationNodeAnimation_dvuhl")
"nodes/Animation 5/position" = Vector2(-340, 600)
"nodes/Animation 6/node" = SubResource("AnimationNodeAnimation_k60pe")
"nodes/Animation 6/position" = Vector2(-560, 460)
nodes/add/node = SubResource("AnimationNodeAdd2_ktbds")
nodes/add/position = Vector2(80, 240)
"nodes/left attack/node" = SubResource("AnimationNodeOneShot_0tcnb")
"nodes/left attack/position" = Vector2(-140, -20)
"nodes/left defend/node" = SubResource("AnimationNodeBlend2_acu70")
"nodes/left defend/position" = Vector2(-320, -40)
nodes/output/position = Vector2(340, 240)
"nodes/right attack/node" = SubResource("AnimationNodeOneShot_sv334")
"nodes/right attack/position" = Vector2(-120, 420)
"nodes/right defend/node" = SubResource("AnimationNodeBlend2_hhr7y")
"nodes/right defend/position" = Vector2(-360, 340)
node_connections = [&"add", 0, &"left attack", &"add", 1, &"right attack", &"left attack", 0, &"left defend", &"left attack", 1, &"Animation 3", &"left defend", 0, &"Animation", &"left defend", 1, &"Animation 4", &"output", 0, &"add", &"right attack", 0, &"right defend", &"right attack", 1, &"Animation 5", &"right defend", 0, &"Animation 2", &"right defend", 1, &"Animation 6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1cxap"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_s532u")
_actor_resource = SubResource("Resource_rsrnc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gcslc")

[node name="player" parent="." instance=ExtResource("2_gkjm6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="player/Armature" index="0"]
bones/2/rotation = Quaternion(0.280449, 1.14425e-07, 3.34322e-08, 0.959869)
bones/3/rotation = Quaternion(-0.280449, -4.71909e-14, -6.68643e-08, 0.959869)
bones/5/rotation = Quaternion(-0.109767, -0.0157907, 0.920204, -0.375402)
bones/5/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.119433, 2.89375e-08, -0.00114524, 0.992842)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.178794, -0.771338, -0.0455111, 0.609097)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.707094, -0.00418436, -0.00418513, 0.707094)
bones/10/rotation = Quaternion(0.109767, -0.0157907, 0.920204, 0.375402)
bones/10/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(0.119433, -2.89375e-08, 0.00114524, 0.992842)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.184022, 0.773228, 0.0836794, 0.601043)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.707094, 0.00418436, 0.00418513, 0.707094)
bones/18/rotation = Quaternion(0.707102, 0.00268443, 0.707102, -0.00268452)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(1.24894e-07, -2.45565e-08, 0.999993, 0.0037964)
bones/19/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.100128, 0.699982, -0.699982, -0.100128)
bones/22/rotation = Quaternion(-0.707102, 0.00268446, 0.707101, 0.00268455)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-1.24894e-07, -2.45565e-08, 0.999993, -0.0037964)
bones/23/scale = Vector3(1, 1, 1)

[node name="Icosphere" parent="player/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, 1.59872e-13, -7.10543e-13, -1.47438e-13, 1, -1.49012e-08, 6.82121e-13, 1.49012e-08, 1, 3.59812e-14, 2.1215, 0.0493873)

[node name="Armour" parent="player/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.143541)

[node name="Cube" parent="player/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.143541)

[node name="Icosphere_001" parent="player/Armature/Skeleton3D" index="3"]
transform = Transform3D(5.81385e-05, -0.00759261, 0.999971, -0.0075924, 0.999942, 0.00759284, -0.999971, -0.00759262, 4.28414e-07, 0.877633, 0.829605, 0.0484898)

[node name="shield" parent="player/Armature/Skeleton3D/Icosphere_001" index="1" instance=ExtResource("3_5xic8")]

[node name="Icosphere_002" parent="player/Armature/Skeleton3D" index="4"]
transform = Transform3D(5.71854e-05, 0.0075927, -0.999971, 0.0075924, 0.999942, 0.00759291, 0.999971, -0.00759261, -5.84865e-07, -0.877633, 0.829605, 0.0484898)

[node name="sword" parent="player/Armature/Skeleton3D/Icosphere_002" index="1" instance=ExtResource("4_2nl88")]

[node name="AttackRange" type="Area3D" parent="player"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/AttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
shape = SubResource("CylinderShape3D_ywpex")

[node name="InteractionRange" type="Area3D" parent="player"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/InteractionRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
shape = SubResource("CylinderShape3D_ywpex")

[node name="AnimationTree" type="AnimationTree" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_xrnqm")
}
tree_root = SubResource("AnimationNodeBlendTree_1wgrn")
anim_player = NodePath("../AnimationPlayer")
parameters/add/add_amount = 1.0
"parameters/left attack/active" = false
"parameters/left attack/internal_active" = false
"parameters/left attack/request" = 0
"parameters/left defend/blend_amount" = 0.0
"parameters/right attack/active" = false
"parameters/right attack/internal_active" = false
"parameters/right attack/request" = 0
"parameters/right defend/blend_amount" = 0

[node name="Head" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.810042, 0.586373, 0, -0.586373, 0.810042, 0, 3.07995, 0)
collision_mask = 0
shape = SubResource("SphereShape3D_1cxap")
spring_length = 2.5

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 104.0
offset_bottom = 206.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Stats" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP : ##/##
SP  : ##
DF  : ##
AT  : ##"

[node name="Equipment" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Equipment
Armour - ????
Sword    - ????
Shield    - ????"

[node name="IntractLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Interact:
R"
horizontal_alignment = 1

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("14_ibrox")]

[node name="Inventory" type="Node" parent="." node_paths=PackedStringArray("_items")]
script = ExtResource("5_ok3pt")
_items = [NodePath("Item"), NodePath("Item2")]

[node name="Item" type="Node" parent="Inventory"]
script = ExtResource("6_dwsm0")
item_data = ExtResource("7_oaxic")
count = 1

[node name="Item2" type="Node" parent="Inventory"]
script = ExtResource("6_dwsm0")
item_data = ExtResource("8_22kqg")
count = 1

[node name="Hurt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("17_r32ks")

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("18_7oaty")

[node name="Block" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("19_or1wg")

[editable path="player"]
[editable path="player/Armature/Skeleton3D/Icosphere_001/shield"]
[editable path="player/Armature/Skeleton3D/Icosphere_002/sword"]
